<resources>
    <string name="app_name">FW Trails</string>
    <string name="action_settings">Settings</string>

    <!--Navigation Drawer Strings-->
    <string name="navDrawer_recordActivity">Record Activity</string>
    <string name="navDrawer_activityHistory">Activity History</string>
    <string name="navDrawer_achievements">Achievements</string>
    <string name="navDrawer_trailMap">Trail Map</string>
    <string name="navDrawer_accountStatistics">Account Statistics</string>
    <string name="navDrawer_accountDetails">Account Details</string>
    <string name="navDrawer_aboutTitle">About</string>
    <string name="navDrawer_exit">Exit</string>
    <string name="navDrawer_311Text">"Report a problem to 311"
    </string>
    <!--End Navigation Drawer Strings-->

    <!-- Strings related to the AboutFragment-->
    <string name="aboutStatement">\nCopyright &#169; 2016 Jared Perry, Jaron Somers, Warren Barnes, Scott Weidenkopf, and Grant Grimm\n\n
  \tPermission is hereby granted, free of charge, to any person obtaining a copy of this software
  and associated documentation files (the "Software"), to deal in the Software without restriction,
  including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense,
  and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so,
  subject to the following conditions:\n\n
  \tThe above copyright notice and this permission notice shall be included in all copies\n
  or substantial portions of the Software.\n\n
  \tTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
  LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
  IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH
  THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <!-- End strings related to the AboutFragment-->

    <!-- Strings related to RecordActivityFragment-->
    <string name="completeActivityPrompt">Are you sure you wish to complete this activity?</string>
    <string name="startStopRecording">Start</string>
    <string name="finishRecording">Finish</string>
    <!-- Strings related to RecordActivityFragment-->

    <!-- Strings related to LoginActivity-->
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_hint_name">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_new_user_text">Don\'t have an Account?</string>
    <string name="login_create_account_button_text">Create Account</string>
    <string name="login_error_no_credentials">Please enter a username and password</string>
    <string name="login_error_incorrect_credentials">Incorrect Username and Password</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="button_Login_text">Login</string>
    <string name="button_Cancel_text">Cancel</string>
    <string name="textview_NewUser_text">Don\'t have an account?</string>
    <string name="createAccount_text">Create Account</string>
    <string name="retypePasswordText">Password (confirm)</string>
    <!-- End Strings related to LoginActivity-->


    <!-- Strings related to AccountCreate -->
    <string name="createNewAccountToolbarTitle">Create New Account</string>
    <string name="height_editText_text">Height (in inches)</string>
    <string name="weight_editText_text">Weight (in pounds)</string>
    <string name="age_editText_text">Birth Year</string>
    <string name="gender_dropDown">Gender</string>
    <string name="disclaimer_textView_text">"Disclaimer: This information is used
        for calories burned estimation."
    </string>
    <string name="gender_SpinnerPrompt">Choose Gender</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to disclose</item>
    </string-array>
    <string name="button_createAccount_text">Create Account</string>
    <string name="accountInfoText">Account Info</string>
    <string name="usernameText">Username</string>
    <string name="personalInfoText">Personal Info (optional)</string>
    <string name="create_account_required_params_needed">Please enter a username and password</string>
    <string name="create_account_max_username_length_exceeded">Username length must be less than  or equal to 16 characters</string>
    <string name="create_account_max_password_length_exceeded">Password length must be less than or equal to 16 characters</string>
    <string name="create_account_password_mismatch">Cannot create account. Passwords do not match.</string>
    <string name="create_account_invalid_height">Please enter a valid height.</string>
    <string name="create_account_invalid_weight">Please enter a valid weight.</string>
    <string name="create_account_invalid_birth_year">Please enter a valid birth year.</string>
    <string name="create_account_error">Server Error</string>
    <string name="create_account_already_exists_error">Account already exists with this username</string>
    <!-- End Strings related to AccountCreate -->

    <!-- Strings related to Account Statistics Activity-->
    <string name="overallStatText">Overall Statistics</string>
    <string name="overallTotalTimeText">Total Duration</string>
    <string name="defaultTimeAmount">00:00:00</string>
    <string name="overallTotalDistanceText">Total Distance</string>
    <string name="defaultDistanceAmount">0.00 mi.</string>
    <string name="overallTopSpeedText">Top Speed</string>
    <string name="defaultTopSpeed">0.00 mph</string>
    <string name="overallAverageSpeedText">Average Speed</string>
    <string name="overallNumberOfAchievementsText">Achievements Earned</string>
    <string name="defaultNumberOfAchievements">0</string>
    <string name="activitySpecificStatText">View Activity Statistics</string>
    <string-array name="activityEntries">
        <item>Biking</item>
        <item>Running</item>
        <item>Walking</item>
    </string-array>
    <string name="activity_SpinnerPrompt">Choose an Activity</string>
    <string name="activitySpecificTotalTimeText">Total Duration</string>
    <string name="activitySpecificTotalDistanceText">Total Distance</string>
    <string name="activitySpecificTopSpeedText">Top Speed</string>
    <string name="activitySpecificAverageSpeedText">Average Speed</string>
    <string name="accountActiveText">Account Active</string>
    <string name="activeDefaultText">&lt; 1 year</string>
    <string name="defaultCaloriesExpendedText">Total Calories Burned</string>
    <string name="defaultCaloriesExpendedAmount">0 kcal</string>
    <string name="accountStatisticsLoadError">There was an error loading your stats.</string>
    <!--End Strings related to Account Statistics Activity-->

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_account_create">AccountCreateActivity</string>
    <string name="title_activity_account_statistics">AccountStatisticsActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_demo_main">DemoMainActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="phone_number_311">311</string>

    <!-- Strings related to Activity History Fragment-->
    <string name="activityHistoryHeaderDuration">Duration</string>
    <string name="activityHistoryHeaderDistance">Distance</string>
    <string name="activityHistoryHeaderCalories">Calories</string>
    <string name="activityHistoryHeaderDate">Date</string>
    <!-- End strings related to Activity History Fragment-->

    <!-- Strings related to Achievements Fragment -->
    <string name="achievementsHeaderDateEarned">Date Earned</string>
    <string name="achievementsHeaderName">Name</string>
    <string name="achievementsHeaderDescription">Description</string>
    <!-- End Strings related to Achievements Fragment -->

    <!-- Strings related to Account Details Fragment -->
    <string name="accountDetailsInfoText">Account Info</string>
    <string name="accountDetailsUsernameText">Username</string>
    <string name="accountDetailsPasswordText">Password</string>
    <string name="accountDetailsPasswordChangeText">Reset Password</string>
    <string name="accountDetailsPasswordConfirmText">Retype New Password</string>
    <string name="accountDetailsPersonalInfoText">Personal Info (optional)</string>
    <string name="accountDetailsHeightText">Height</string>
    <string name="accountDetailsWeightText">Weight</string>
    <string name="accountDetailsAgeText">Birth Year</string>
    <string name="accountDetailsSexText">Sex</string>
    <string-array name="accountDetails_gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to disclose</item>
    </string-array>
    <string name="testUsername">UserTest</string>
    <string name="accountDetailsTestHeight">72 in</string>
    <string name="accountDetailsTestWeight">188 lbs</string>
    <string name="accountDetailsTestBirthYear">1994</string>
    <string name="accountDetailsPWMismatchError">New passwords do not match! Please retype the passwords so they match.</string>
    <string name="accountDetailsUpdateGeneralError">There was an error updating your account. Your account was not updated</string>
    <string name="accountDetailsAccountDetailsGetError">There was an error retrieving your account information.</string>
    <string name="accountDetailsUpdateSuccess">Account has been updated</string>
    <!-- End Strings related to Account Details Fragment-->

    <!-- Strings related to the Trail Map Fragment-->
    <string name="mapSpinnerPrompt">Choose a Map Area</string>
    <string-array name="trailMapViewArray">
        <item>Full Map</item>
        <item>Full Map Area</item>
        <item>North</item>
        <item>South</item>
        <item>East</item>
        <item>West</item>
    </string-array>
    <!-- End Strings related to Trail Map Fragment-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
