<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="seniordesign.ipfw.fw_trails_app.AccountCreateFragment">

    <!-- TODO: Update blank fragment layout -->




    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/height_editText_text"
        android:id="@+id/height_editText"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/weight_editText"
        android:layout_alignStart="@+id/weight_editText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/weight_editText"
        android:hint="@string/weight_editText_text"
        android:layout_below="@+id/height_editText"
        android:layout_alignLeft="@+id/age_editText"
        android:layout_alignStart="@+id/age_editText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/age_editText"
        android:hint="@string/age_editText_text"
        android:layout_below="@+id/weight_editText"
        android:layout_alignLeft="@+id/gender_Spinner"
        android:layout_alignStart="@+id/gender_Spinner"/>


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:id="@+id/gender_Spinner"
        android:entries="@array/gender_array"
        android:prompt="@string/gender_SpinnerPrompt"
        android:layout_below="@+id/age_editText"
        android:layout_alignLeft="@+id/disclaimer_Textview"
        android:layout_alignStart="@+id/disclaimer_Textview"
        android:layout_alignRight="@+id/disclaimer_Textview"
        android:layout_alignEnd="@+id/disclaimer_Textview"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/disclaimer_textView_text"
        android:id="@+id/disclaimer_Textview"
        android:layout_below="@+id/gender_Spinner"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_createAccount_text"
        android:id="@+id/createAccountButton"
        android:layout_below="@+id/disclaimer_Textview"
        android:layout_alignRight="@+id/accountInfoTextView"
        android:layout_alignEnd="@+id/accountInfoTextView"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Cancel_text"
        android:id="@+id/cancelCreateAccountButton"
        android:layout_marginRight="36dp"
        android:layout_marginEnd="36dp"
        android:layout_below="@+id/disclaimer_Textview"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/accountInfoText"
        android:id="@+id/accountInfoTextView"
        android:layout_marginTop="29dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createUsernameEditText"
        android:hint="@string/usernameText"
        android:layout_below="@+id/accountInfoTextView"
        android:layout_alignLeft="@+id/accountInfoTextView"
        android:layout_alignStart="@+id/accountInfoTextView"
        android:layout_marginTop="22dp"
        android:layout_alignRight="@+id/height_editText"
        android:layout_alignEnd="@+id/height_editText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/login_hint_password"
        android:id="@+id/createPasswordEditText"
        android:layout_below="@+id/createUsernameEditText"
        android:layout_alignLeft="@+id/createUsernameEditText"
        android:layout_alignStart="@+id/createUsernameEditText"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/retypePasswordText"
        android:id="@+id/retypeCreatePasswordEditText"
        android:layout_below="@+id/createPasswordEditText"
        android:layout_alignLeft="@+id/createPasswordEditText"
        android:layout_alignStart="@+id/createPasswordEditText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/personalInfoText"
        android:id="@+id/textView"
        android:layout_above="@+id/height_editText"
        android:layout_alignLeft="@+id/height_editText"
        android:layout_alignStart="@+id/height_editText"
        android:layout_marginBottom="18dp"/>

</RelativeLayout>
