<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AccountStatisticsFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/overallStatText"
        android:id="@+id/overallStatTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/overallTotalTimeText"
        android:id="@+id/overallTotalTimeTextView"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/overallStatTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defaultTimeAmount"
        android:id="@+id/overallTotalTimeAmountTextView"
        android:layout_above="@+id/overallTotalDistanceAmountTextView"
        android:layout_toRightOf="@+id/activitySpecificStatTextView"
        android:layout_toEndOf="@+id/activitySpecificStatTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/overallTotalDistanceText"
        android:id="@+id/overallTotalDistanceTextView"
        android:layout_below="@+id/overallTotalTimeTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defaultDistanceAmount"
        android:id="@+id/overallTotalDistanceAmountTextView"
        android:layout_alignTop="@+id/overallTotalDistanceTextView"
        android:layout_alignLeft="@+id/overallTotalTimeAmountTextView"
        android:layout_alignStart="@+id/overallTotalTimeAmountTextView"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/overallNumberOfActivitiesText"
        android:id="@+id/overallNumberOfActivitiesTextView"
        android:layout_below="@+id/totalCaloriesExpendedTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defaultNumberOfActivities"
        android:id="@+id/overallNumberOfActivitiesAmountTextView"
        android:layout_alignTop="@+id/overallNumberOfActivitiesTextView"
        android:layout_alignLeft="@+id/overallNumberOfActivitiesTextView"
        android:layout_alignStart="@+id/overallTotalDistanceAmountTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/activitySpecificStatText"
        android:id="@+id/activitySpecificStatTextView"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/overallNumberOfActivitiesTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:id="@+id/activity_Spinner"
        android:prompt="@string/activity_SpinnerPrompt"
        android:entries="@array/activityEntries"
        android:layout_below="@+id/activitySpecificStatTextView"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/activitySpecificStatTextView"
        android:layout_alignEnd="@+id/activitySpecificStatTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/activitySpecificTotalTimeText"
        android:id="@+id/activitySpecificTotalTimeTextView"
        android:layout_below="@+id/activity_Spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defaultTimeAmount"
        android:id="@+id/activitySpecificTotalTimeAmountTextView"
        android:layout_alignBottom="@+id/activitySpecificTotalTimeTextView"
        android:layout_alignLeft="@+id/overallNumberOfActivitiesAmountTextView"
        android:layout_alignStart="@+id/overallNumberOfActivitiesAmountTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/activitySpecificTotalDistanceText"
        android:id="@+id/activitySpecificTotalDistanceTextView"
        android:layout_below="@+id/activitySpecificTotalTimeTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defaultDistanceAmount"
        android:id="@+id/activitySpecificTotalDistanceAmountTextView"
        android:layout_alignTop="@+id/activitySpecificTotalDistanceTextView"
        android:layout_alignRight="@+id/activitySpecificTotalTimeAmountTextView"
        android:layout_alignLeft="@+id/activitySpecificTotalTimeAmountTextView"
        android:layout_alignStart="@+id/activitySpecificTotalTimeAmountTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/accountActiveText"
        android:id="@+id/accountActiveTextView"
        android:layout_above="@+id/overallTotalTimeAmountTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/activeDefaultText"
        android:id="@+id/accountActiveAmountTextView"
        android:layout_above="@+id/overallTotalTimeAmountTextView"
        android:layout_alignLeft="@+id/overallTotalTimeAmountTextView"
        android:layout_alignStart="@+id/overallTotalTimeAmountTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defaultCaloriesExpendedText"
        android:id="@+id/totalCaloriesExpendedTextView"
        android:layout_below="@+id/overallTotalDistanceTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defaultCaloriesExpendedAmount"
        android:id="@+id/totalCaloriesExpendedAmountTextView"
        android:layout_below="@+id/overallTotalDistanceAmountTextView"
        android:layout_alignLeft="@+id/overallTotalDistanceAmountTextView"
        android:layout_alignStart="@+id/overallTotalDistanceAmountTextView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defaultCaloriesExpendedText"
        android:id="@+id/activitySpecificCaloriesExpendedTextView"
        android:layout_below="@+id/activitySpecificTotalDistanceTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/defaultCaloriesExpendedAmount"
        android:id="@+id/activitySpecificCaloriesExpendedAmountTextView"
        android:layout_below="@+id/activitySpecificTotalDistanceAmountTextView"
        android:layout_alignLeft="@+id/activitySpecificTotalDistanceAmountTextView"
        android:layout_alignStart="@+id/activitySpecificTotalDistanceAmountTextView"/>
</RelativeLayout>
