<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                tools:context="seniordesign.ipfw.fw_trails_app.LoginActivity"
    >

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:password="true"
        android:text=""
        android:layout_marginTop="36dp"
        android:layout_below="@+id/usernameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <AutoCompleteTextView
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint_name"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/sponsorImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:id="@+id/sponsorImage"
        android:src="@drawable/sponsor_image2"
        android:layout_below="@+id/login_progress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <Button
        style="@style/AppCompat.Button.FW_Trails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Login_text"
        android:id="@+id/button_Ok"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="18dp"
        android:layout_alignLeft="@+id/textViewNewUser"
        android:layout_alignStart="@+id/textViewNewUser"
        android:layout_alignRight="@+id/textViewNewUser"
        android:layout_alignEnd="@+id/textViewNewUser"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_NewUser_text"
        android:id="@+id/textViewNewUser"
        android:textSize="24dp"
        android:layout_below="@+id/button_Ok"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"/>

    <Button
        style="@style/AppCompat.Button.FW_Trails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount_text"
        android:id="@+id/button_CreateAccount"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/textViewNewUser"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
