<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context="seniordesign.ipfw.fw_trails_app.AchievementsFragment">
        <TableLayout android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:stretchColumns="*"
                     android:id="@+id/achievements_header"
            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_column="0"
                    android:padding="10sp"
                    android:gravity="left"
                    android:textColor="#FFFFFF"
                    android:text="@string/achievementsHeaderDateEarned"
                    android:background="#828fd4"
                    >
                </TextView>
                <TextView
                    android:layout_column="1"
                    android:padding="10sp"
                    android:gravity="left"
                    android:text="@string/achievementsHeaderName"
                    android:textColor="#FFFFFF"
                    android:background="#828fd4"
                    >
                </TextView>
                <TextView
                    android:layout_column="2"
                    android:padding="10sp"
                    android:gravity="left"
                    android:text="@string/achievementsHeaderDescription"
                    android:textColor="#FFFFFF"
                    android:background="#828fd4"
                    >
                </TextView>
            </TableRow>
        </TableLayout>
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/achievements_listView"
            />
</LinearLayout>
